--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f4e4ba;
+    background: #0F2027;  
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027); 
+
 }
+
 .container{
     background-color: #fff;
     padding: 2rem;
     border-radius: 1rem;
     min-height: 44vh;
-    width: 40vh;
+    width: 45vh;
 }
 form{
     margin:2rem 0 1rem 0 ;
@@ -55,13 +59,18 @@ form input{
 .select-container select{
     font-size: 1rem;
     width: auto;
+    padding: 1px;
+    
 }
+.select-container select::-webkit-scrollbar {
+    display: none;
+  }
 .msg{
     margin: 2rem;
 }
 form button{
     height: 3rem;
-    background-color: #af4d98;
+    background-color: #247b34;
     color: white;
     font-size: 1.15rem;
     cursor: pointer;
